# speechwoz

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml
rec-multiwoz/.github/workflows/: flake8.yml
socketio-chat/: requirements.txt
socketio-chat/app/: __init__.py
socketio-chat/app/main/: routes.py
socketio-chat/app/templates/: chat.html  index.html
speechwoz/: __init__.py  app.py  db.py  schema.sql
speechwoz/static/js/: speechwoz.js
speechwoz/templates/: annotate.html  base.html  index.html  survey.html
src/: chat.py
src/app/templates/: continue.html
streamlit-prototype/: setup.py
tests/: TODO
